<resources>
    <string name="app_name">My Therapy Dog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_title">I have..</string>

    <string name="human">32 Teeth</string>
    <string name="dog">42 Teeth</string>
    <string name="title_activity_human_home">HumanHomeActivity</string>
    <string name="title_activity_canine_home">CanineHomeActivity</string>
    <string name="fragment1_text">Fragment1</string>
    <string name="fragment2_text">Fragment2</string>
    <string name="fragment3_text">Fragment3</string>
    <string name="fragment4_text">Fragment4</string>
    <string name="title_activity_completed">CompletedActivity</string>
    <string name="completed">Thanks for completing a Therapy Dog regitration</string>

    <string name="dummy_user_name">Jack</string>
    <string name="dummy_user_email">jack.johnny@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key">AIzaSyC5CgSqsAPbSu2aBAzbQ39rRxXelHpDO3E</string>
    <string name="title_activity_canine_details">CanineDetailsActivity</string>


    <string name="name_label">Name:</string>
    <string name="age_label">Age:</string>

    <string name="breed_label">Breed:</string>
    <string name="description_label">Description:</string>

    <string name="getDog">Get Dog</string>
    <string name="title_activity_donation">DonationActivity</string>

</resources>
