<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tdn.therapydog.fragments.CanineDetailsFragment">

    <ImageView
        android:id="@+id/canineImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:id="@+id/canineDetailsLayout"
        android:layout_below="@+id/canineImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                />

            <TextView
                android:id="@+id/nameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_label"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                />

            <TextView
                android:id="@+id/ageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/breedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/breedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breed_label"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                />

            <TextView
                android:id="@+id/breedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/descriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/getDogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/getDog"
        />

</RelativeLayout>
